fix: fix width on Firefox

--- a/src/components/breadcrumb/breadcrumb/breadcrumb.scss
+++ b/src/components/breadcrumb/breadcrumb/breadcrumb.scss
@@ -50,3 +50,10 @@
 .sbb-breadcrumb__label--opens-in-new-window {
   @include sbb.screen-reader-only;
 }
+
+.sbb-breadcrumb__icon,
+::slotted(*) {
+  slot[name='icon'] & {
+    flex-shrink: 0;
+  }
+}
